--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,6 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=hugo
 
 ### Hugo ###
-# Generated files by hugo
-/resources/_gen/
-/assets/jsconfig.json
-hugo_stats.json
 
 # Executable may be added to repository
 hugo.exe
@@ -94,3 +90,9 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+/.idea/agentic-diskurs.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/vcs.xml
