--- a/hugo.yaml
+++ b/hugo.yaml
@@ -38,7 +38,7 @@ params:
     sizes: [400,600]
   hero:
     # Main hero title
-    title: Multi-Agent Workflow Orcherstration
+    title: Multi-Agent Workflow Orchestration
     # Hero subtitle (optional)
     subtitle: A hackable and extendable Python framework for developing LLM-based multi-agent systems
     # Button text
