--- a/hugo.yaml
+++ b/hugo.yaml
@@ -50,16 +50,8 @@ params:
     # Footer logos (from static/images/logos/clients/*.svg)
     # urls are optional
     clientlogos:
-    - logo: systek
-      url: https://google.com
-    - logo: tribe
-      url: https://stefma.github.io/hugo-fresh/
-    - logo: kromo
-      url: https://github.com/StefMa/hugo-fresh
-    - logo: infinite
-      url: https://hugo-fresh.vercel.app/
-    - logo: gutwork
-      url: https://bulma.io/
+    - logo: opensystems
+      url: https://www.open-systems.com/
   # Customizable navbar. For a dropdown, add a "sublinks" list.
   navbar:
   - title: Github
